15Apr01=======================================================================
1. made some mods to the sgml documentation for 1.47
2. added show/connect command
11Apr01=======================================================================
1. fixed more of the "xxx disappeared from yyy" messages
2. altered the build no logic so that it always checksums the same files
regardless of whatever else you might have in the directory.
3. made shortcut at shutdown so that you don't get a storm of PC21s on busy
nodes as each connection goes down. Just send a pc39 to each interface and
nothing else.
4. changed action of SIG{INT} and SIG{TERM} so that they now work on MSWin32
10Apr01=======================================================================
1. altered PC21 logic somewhat to eliminate dup PC21s
2. disconnect should remove dangling local users in the routing table.
3. fixed nasty recursive timer bug
4. added some extra info to make connect tracking a bit easier.
5. improved docs on connect scripts a bit (to include agw connects)
09Apr01=======================================================================
1. changed lockfile name to cluster.lck (from .lock) for MSWin's benefit
08Apr01=======================================================================
1. added a quick installation guide to the admin manual and removed references
to client.pl (g0vgs)
01Apr01=======================================================================
1. changed agwrestart semantics. You need to use main::agwrestart() in your
crontabs rather than AGWMsg::init();
2. try to thread winclient.pl for MSWin32.
31Mar01=======================================================================
1. added agwrestart command
2. add Iains Windoze installation manual (g0vgs)
3. various alterations to adminmanual and initial version of the CVS changes
file (g0vgs)
30Mar01=======================================================================
1. fix errors on accept in ExtMsg and in Msg