@@ -11,4 +11,4 @@ my $type = 'accept';
 my $sort  = 'ann';
 
 my ($r, $filter, $fno) = $AnnTalk::filterdef->cmd($self, $sort, $type, $line);
-return (0, $r ? $r : $self->msg('filter1', $fno, $filter->{name})); 
+return (0, $r ? $filter : $self->msg('filter1', $fno, $filter->{name})); 
