@@ -1,3 +1,6 @@
+16Apr01=======================================================================
+1. make the correct error messages come out on reject/accept when people
+leave out keywords like 'on'.
 15Apr01=======================================================================
 1. made some mods to the sgml documentation for 1.47
 2. added show/connect command
